# slam-presale-program

./: .gitignore  Anchor.toml  README.SLAM  package-lock.json  package.json  tsconfig.json
assets/: slam-token.json
programs/slam_governance/: Cargo.toml
programs/slam_governance/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/slam_presale/: Cargo.toml
programs/slam_presale/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
programs/slam_presale/src/instructions/: admin.rs  buy_with_sol.rs  buy_with_stable.rs  claim_tokens.rs  enable_claim.rs  finalize.rs  initialize.rs  mod.rs  refund.rs
programs/slam_staking/: Cargo.toml
programs/slam_staking/src/: constants.rs  errors.rs  lib.rs  state.rs
scripts/: attach-token-metadata.mjs  close-presale-state.ts  create-mint.ts  create-vesting-streams.mjs  devnet-gov-smoke.ts  devnet-govern-doublevote-poc.ts  devnet-verify-setparams.ts  fetch-proposals.ts  initialize-presale.ts  setup-governance.ts  setup-staking.ts  show-presale-state.ts
tests/: slam_presale.ts  slam_staking.ts
