[package]
name = "slam_governance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slam_governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "slam_staking/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# Voting weight is read from slam_staking's StakeAccount. Depending on the crate
# (rather than parsing raw bytes at fixed offsets) means Anchor validates the
# owning program and the account discriminator, and a field reorder in staking
# becomes a compile error here instead of silently corrupting vote weights.
slam_staking = { path = "../slam_staking", features = ["no-entrypoint"] }
