[package]
name = "slam_presale"
version = "0.1.0"
description = "SLAM token presale program: 10-round SOL/USDC/USDT sale with linear vesting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slam_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pyth-sdk-solana = "=0.10.3"
